--- a/Indexing/Indexing.Application.Client/Indexing.Application.Client.csproj
+++ b/Indexing/Indexing.Application.Client/Indexing.Application.Client.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Indexing.Application\Indexing.Application.csproj" />
+    <ProjectReference Include="..\Indexing.BL\Indexing.BL.csproj" />
+  </ItemGroup>
+
 </Project>
